# scardcontrol

./: Makefile.am  README.md  autogen.sh  configure.ac  scardcontrol.c
